[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Flashlight.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/FlashlightSway.gd" type="Script" id=3]
[ext_resource path="res://sound/stepping.wav" type="AudioStream" id=4]
[ext_resource path="res://animation/flashlight_bob.tres" type="Animation" id=5]
[ext_resource path="res://sound/flashlight_click.wav" type="AudioStream" id=6]
[ext_resource path="res://fonts/standard_theme.tres" type="Theme" id=7]
[ext_resource path="res://sound/item_pickup.wav" type="AudioStream" id=8]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 2.0

[sub_resource type="CapsuleShape" id=2]
height = 2.0

[sub_resource type="CylinderShape" id=3]

[node name="Player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )

[node name="Camera" type="Camera" parent="Head"]
near = 0.01
far = 1000.0

[node name="Flashlight" parent="Head" instance=ExtResource( 2 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0.0848848, -0.0831751, 0 )
script = ExtResource( 3 )
sway_left = Vector3( 0, 0.1, 0 )
sway_right = Vector3( 0, -0.1, 0 )

[node name="OmniLight" type="OmniLight" parent="Head/Flashlight"]
transform = Transform( 1.33333, 0, 2.13163e-14, 0, 1.33333, 0, -2.13163e-14, 0, 1.33333, 0.266242, 0.119185, 1.49012e-08 )
visible = false
omni_range = 16.0

[node name="FlashlightSoundPlayer" type="AudioStreamPlayer" parent="Head/Flashlight"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="PickupRaycast" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -2.5 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="SteppingSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Head")
anims/flashlight_bob = ExtResource( 5 )

[node name="PickupSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FlashlightPopup" type="Popup" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
theme = ExtResource( 7 )
popup_exclusive = true

[node name="Label" type="Label" parent="UI/FlashlightPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
text = "PRESS F FOR FLASHLIGHT"
align = 1
valign = 1
